# tree-to-triples

./: .gitignore  README.md  composer.json  utils.php
dwca/: test.php
dwca/msw3/: meta.xml
gmlreader/: Makefile.am  configure.in  gml2rdf  gml2rdf.cpp
msw/: msw.gml  msw2gml.php  msw2rdf.php  tree.php
tree-to-triples.bbprojectd/: project.bbprojectdata  rpage.bbprojectsettings
